# crazy-inn

./: .gitignore  Cargo.toml  crazy_inn.d.ts  crazy_inn.js  crazy_inn_bg.wasm.d.ts  index.html  package.json
assets/: README.md
src/: index.html  lib.rs  main.rs
