[package]
name = "crazy-inn"
version = "0.1.0"
authors = ["Brian Merchant <bhmerchant@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.76"
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2.git", branch = "master"}

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
branch = "main"
default-features = false
features = ["bevy_winit", "render"]